--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BRICK | Design Bible</title>
-    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;700;900&display=swap" rel="stylesheet">
     <style>
       body {
@@ -38,6 +38,12 @@
   }
 }
 </script>
+    <script type="module">
+      import config from '/tailwind.config.js';
+      window.tailwind = window.tailwind || {};
+      window.tailwind.config = config;
+    </script>
+    <script src="https://cdn.tailwindcss.com"></script>
 <link rel="stylesheet" href="/index.css">
 </head>
   <body>
